--- a/.travis.yml
+++ b/.travis.yml
@@ -5,24 +5,24 @@ services:
   - docker
 
 before_install:
-  - docker build -t dockmaker54/docker_react -f Dockerfile.dev .
+  - docker build -t dockmaker54/docker -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true dockmaker54/docker_react npm run test -- --coverage
+  - docker run -e CI=true dockmaker54/docker npm run test -- --coverage
 
 deploy:    
     provider: elasticbeanstalk
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key:
-      secure: "$AWS_SECRET_KEY" 
+    
     region: 'us-east-1'
     app: 'docker_react'
     env: 'Dockerreact-env'
     bucket_name: 'elasticbeanstalk-us-east-1-083020474640'
-    bucket_path: 'docker'
-    skip_cleanup: true
+    bucket_path: 'docker_react'
     on:
       branch: main
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+      secure: "$AWS_SECRET_KEY" 
   
 
 
