initial Travis commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 sudo: required
-language: generic
-
 services:
   - docker
 
@@ -8,23 +6,6 @@ before_install:
   - docker build -t dockmaker54/docker -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true dockmaker54/docker npm run test -- --coverage
+  - docker run dockmaker54/docker npm run test -- --coverage
 
-deploy:    
-    provider: elasticbeanstalk
-    
-    region: 'us-east-1'
-    app: 'docker_react'
-    env: 'Dockerreact-env'
-    bucket_name: 'elasticbeanstalk-us-east-1-083020474640'
-    bucket_path: 'docker_react'
-    on:
-      branch: main
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY 
-   
-
-
-
-
-
+  
