--- a/.travis.yml
+++ b/.travis.yml
@@ -12,18 +12,18 @@ script:
 
 deploy:    
     provider: elasticbeanstalk
-    
     region: 'us-east-1'
     app: 'docker_react'
     env: 'Dockerreact-env'
-    bucket_name: 'elasticbeanstalk-us-east-1-083020474640'
+    bucket_name: 'eelasticbeanstalk-us-east-1-083020474640'
     bucket_path: 'docker_react'
     on:
       branch: main
     access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY 
+    secret_access_key: '$AWS_SECRET_KEY'
    
 
+   
 
 
 
