--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t dockmaker54/docker -f Dockerfile.dev .
+  - docker build -t dockmaker54/frontend -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true dockmaker54/docker npm run test -- --coverage
