--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t dockmaker54/frontend -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true dockmaker54/docker npm run test -- --coverage
+  - docker run -e CI=true dockmaker54/frontend npm run test -- --coverage
 
 deploy:    
     provider: elasticbeanstalk
